2014-08-05  Lucas Forschler  <lforschler@apple.com>

        Merge r171891

    2014-07-31  Beth Dakin  <bdakin@apple.com>

            Hit-testing broken in WebKit 1 views with AppKit's contentInsets
            https://bugs.webkit.org/show_bug.cgi?id=135434
            -and corresponding-
            <rdar://problem/17850323>

            Reviewed by Benjamin Poulain.

            These hit-testing related contentInset tests will now work for mac on wk1 on 
            Yosemite and wk2.

            * platform/mac-wk1/TestExpectations:
            * platform/mac-wk2/tiled-drawing/content-inset-hit-testing-expected.txt: Removed.
            * platform/mac-wk2/tiled-drawing/content-inset-hit-testing-in-frame-expected.txt: Removed.
            * platform/mac-wk2/tiled-drawing/content-inset-hit-testing-in-frame.html: Removed.
            * platform/mac-wk2/tiled-drawing/content-inset-hit-testing.html: Removed.
            * platform/mac-wk2/tiled-drawing/resources/iframe-to-hit-test.html: Removed.
            * platform/mac/fast/events/content-inset-hit-testing-expected.txt: Copied from platform/mac-wk2/tiled-drawing/content-inset-hit-testing-expected.txt.
            * platform/mac/fast/events/content-inset-hit-testing-in-frame-expected.txt: Copied from platform/mac-wk2/tiled-drawing/content-inset-hit-testing-in-frame-expected.txt.
            * platform/mac/fast/events/content-inset-hit-testing-in-frame.html: Copied from platform/mac-wk2/tiled-drawing/content-inset-hit-testing-in-frame.html.
            * platform/mac/fast/events/content-inset-hit-testing.html: Copied from platform/mac-wk2/tiled-drawing/content-inset-hit-testing.html.
            * platform/mac/fast/events/resources: Added.
            * platform/mac/fast/events/resources/iframe-to-hit-test.html: Copied from platform/mac-wk2/tiled-drawing/resources/iframe-to-hit-test.html.

2014-08-05  Lucas Forschler  <lforschler@apple.com>

        Merge r171882

    2014-07-31  Andrei Bucur  <abucur@adobe.com>
