@@ -1,0 +1,20 @@
+<html>
+<head>
+<style>
+    #target {
+        background-color:purple;
+        width:25px;
+        height:25px;
+    }
+</style>
+<script>
+    function clicked() {
+        var result = parent.document.getElementById("result");
+        result.innerHTML = "Pass!";
+    }
+</script>
+</head>
+<body>
+    <div id="target" onclick="clicked()"></div>
+</body>
+</html>
